# tmp

./: .gitignore
data_preprocessing/: berkley_lab_data.py
models/archive/crbm_tf_1/: mnist_example.py
models/archive/rnn/: rnn.py
models/crbm/: README.md  main.py  pyproject.toml
models/crbm/archive/: crbm_julia.py
models/crbm_tf_0/: README.md  crbm.py  pyproject.toml
models/crbm_tf_1/: CRBM.py  pyproject.toml  test.py
models/crbm_tf_2/: README.md  crbm.py  crbm_julia.py  crbm_julia_rework.py  own_impl.py  pyproject.toml  test.py
models/rnn/: README.md  pyproject.toml  rnn.py
shared_code/: custom_callback.py  per_rms_diff.py
trash/: trash_rnn.py
util/: plotter.py  terminal_colorizer.py
