[tool.poetry]
name = "crbm_tf_1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.1"
tensorflow = "1.13.1"
scipy = "1.6.3"
matplotlib = "^3.4.2"
tornado = "^6.1"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
