[tool.poetry]
name = "crbm_tf_2"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
tensorflow-probability = "^0.13.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
